<resources>
    <string name="app_name">KWART Launcher</string>
    <string name="gallery_string">Galler</string>
    <string name="schedule">Schedule</string>
    <string name="contacts_se">Contacts SE</string>
    <string name="contacts">Contacts</string>
    <string name="video_chat">Video-call</string>
    <string name="files">Files</string>
    <string name="phone">Phone</string>
    <string name="settings_screen_volume">Display and sound</string>
    <string name="settings_date_time">Date and time</string>
    <string name="settings_language">Language</string>
    <string name="settings_control">Protect</string>
    <string name="settings_about_watch">About watch</string>
    <string name="apps_title">Apps</string>
    <string name="warning">Warning!</string>
    <string name="empty_password">Password cannot be empty!</string>
    <string name="wrong_password">Wrong password! Ask them your parents!</string>
    <string name="enter_password_to_start_app">To start app enter password!</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="enter_password">Enter password…</string>
    <string name="saved">Saved!</string>
    <string name="new_password_saved">New password saved!</string>
    <string name="ok">Ok</string>
    <string name="error">Error!</string>
    <string name="password_mismatch">Pasword are not same!  Try again</string>
    <string name="confirm_password">Confirm password</string>
    <string name="forgott_password_warning">If you forgott password, you cat restore them only after factory reset!</string>
    <string name="save">Save</string>
    <string name="confirm_password_hint">Confirm password…</string>
    <string name="new_password">New password</string>
    <string name="enter_new_password_hint">Enter new password…</string>
    <string name="wrong_password_try_again">Wrong password! Try again</string>
    <string name="confirm_password2">Confirm</string>
    <string name="change_password_hint">To change current password, enter previous</string>
    <string name="settings_title">Settings</string>
    <string name="enter_password_require">This menu require password!</string>
    <string name="award">Awards</string>
    <string name="watch_model">Модель</string>
    <string name="imei">IMEI</string>
    <string name="settings_control_title">Guard</string>
    <string name="enable_app_lock">Enable app guard</string>
    <string name="show_other_apps">Show other apps</string>
    <string name="show_internet_apps">Show internet apps</string>
    <string name="change_password">Change password</string>
    <string name="assist">Assistant</string>
    <string name="connect">Connect</string>
    <string name="shutdown">Shutdown</string>
    <string name="reboot">Reboot</string>

</resources>