<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_control_title"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/background_shape"
        android:orientation="vertical"
        android:padding="8dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">


        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/protectAppsEnable"
            android:layout_width="match_parent"
            android:checked="true"
            app:thumbTint="@color/accent"
            app:trackTint="@color/recycler_item_color_dark"
            android:layout_height="wrap_content"
            android:text="@string/enable_app_lock"
            android:textSize="18sp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/showOtherApps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:thumbTint="@color/accent"
            app:trackTint="@color/recycler_item_color_dark"
            android:layout_marginTop="4dp"
            android:text="@string/show_other_apps"
            android:textSize="18sp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/showInternetApps"
            android:layout_width="match_parent"
            android:layout_marginTop="4dp"
            app:thumbTint="@color/accent"
            app:trackTint="@color/recycler_item_color_dark"
            android:layout_height="wrap_content"
            android:text="@string/show_internet_apps"
            android:textSize="18sp" />

        <Button
            android:id="@+id/changePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:layout_marginTop="4dp"
            android:background="@drawable/background_shape_tinted"
            android:text="@string/change_password" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>